# mecagent

./: IMPLEMENTATION_SUMMARY.md  Makefile  README.md  colab_setup.py  debug_dataset.py  debug_predictions.py  evaluate_models.py  pyproject.toml  requirements.txt  test_imports.py  test_setup.py  train_baseline.py  train_enhanced.py
configs/: baseline.yaml  enhanced.yaml
grammars/: cadquery_ebnf.lark
results/: RESULTS.md
src/: __init__.py  data.py  eval.py  infer.py  train.py  utils.py
src/models/: __init__.py  baseline.py  enhanced.py
