[project]
name = "mecagent-technical-test"
version = "0.1.0"
description = "CadQuery Code Generator - Technical Test"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cadquery>=2.5.2",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "scipy>=1.15.3",
    "trimesh>=4.6.11",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "timm>=0.9.0",
    "peft>=0.7.0",
    "accelerate>=0.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "rich>=13.0.0",
    "tyro>=0.5.0",
    "lark>=1.1.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
